try to document enforce constraint equations

--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -343,6 +343,26 @@ fails since $2.18828\text{e$+$}15 > 1.66901\text{e$+$}06$.
 %\end{verbatim}
 modify the residual test taking in account the rate of change of the status.
 
+\subsubsection{Enforce Constraint Equations}
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{card} ::= \kw{enforce constraint equations} : \{
+    	\kw{constraint violations} [, \kw{scale factor}, \bnt{scale_factor}] | 
+	\kw{constraint violation rates} 
+\} ;
+\end{Verbatim}
+%\end{verbatim}
+modify the residual test for the algebrainc constraint equations only:
+if the \kw{constraint violations} option is chosen then the algebraic equations
+residual is multiplied by \bnt{dCoef} when computing the residual test.
+This compensated the fact that the algebraic equations are divided by 
+\bnt{dCoef} in order to improve the linear system comdition number (cfr. MBDyn's
+technical manual), so that the residual tends to become bigger for very samll time steps. 
+If the optional \kw{scale factor} keyword is chosen then 
+the constraint equations are scaled by \bnt{scale\_factor}. The default is 
+to scale by \bnt{scale\_factor}=1./\bnt{initial\_time\_step}.
+If, instead, the \kw{constraint violation rates} is chosen, then nothing changes.
+
 \subsubsection{Method}
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
