--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -430,7 +430,7 @@ and the algebraic variables, and a driver is used, to allow parameter
 dependent radius variation.
 \begin{itemize}
 \item \kw{DIRK33}, \kw{DIRK34} and \kw{DIRK54} are third-order  four-stages, third-order 
-five stages and fouth-order six stages, L-stable stiffly-accurate methods from 
+five stages and fourth-order six stages, L-stable stiffly-accurate methods from 
 \cite{kennedy_diagonally_2019}.
 \end{itemize}
 
