--- a/manual/input/module-fab-electric.tex
+++ b/manual/input/module-fab-electric.tex
@@ -38,6 +38,11 @@ This module implements several electric components.
 \subsubsection{Resistor}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{name} ::= \kw{resistor}
+
+    \bnt{module_data} ::=
+        \bnt{electric_node_1_label} ,
+        \bnt{electric_node_2_label} ,
+        (\hty{real}) \bnt{resistance}
 \end{Verbatim}
 
 \subsubsection{Capacitor}
