move module-fab-electric stuff in dedicated file

--- a/manual/input/modules.tex
+++ b/manual/input/modules.tex
@@ -161,61 +161,11 @@ The output is obtained in plain text in the \textbf{.usr} file where the columns
                         %~ << std::endl;
 
 
-\subsection{Module-fab-electric}
-\emph{Author: Eduardo Okabe}
 
-\noindent
-This module implements several electric components.
-
-\subsubsection{Resistor}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{resistor}
-\end{Verbatim}
-
-\subsubsection{Capacitor}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{capacitor}
-\end{Verbatim}
-
-\subsubsection{Inductor}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{inductor}
-\end{Verbatim}
-
-\subsubsection{Diode}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{diode}
-\end{Verbatim}
-
-\subsubsection{Switch}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{switch}
-\end{Verbatim}
-
-\subsubsection{Electrical source}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{electrical source}
-\end{Verbatim}
-
-\subsubsection{Ideal transformer}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{ideal transformer}
-\end{Verbatim}
-
-\subsubsection{Operational amplifier}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{operational amplifier}
-\end{Verbatim}
-
-\subsubsection{BJT}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{bjt}
-\end{Verbatim}
-
-\subsubsection{Proximity sensor}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{name} ::= \kw{proximity sensor}
-\end{Verbatim}
+% moved to separate file
+%\subsection{Module-fab-electric}
+%\emph{Author: Eduardo Okabe}
+\input{module-fab-electric}
 
 
 
