--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -2904,7 +2904,8 @@
 	booktitle = "{XVII Congresso Nazionale AIDAA}",
 	month = "September 15--19",
 	address = "Rome, Italy",
-	note = "http://mbdyn.aero.polimi.it/\~{}masarati/Publications/SliderAIDA A2003.pdf"
+	xnote = "http://mbdyn.aero.polimi.it/\~{}masarati/Publications/SliderAIDAA2003.pdf",
+	note = {https://home.aero.polimi.it/masarati/Publications/SliderAIDAA2003.pdf}
 }
 
 @BOOK{MODELICA-TILLER-2001,
